# ChangeLog for sec-policy/selinux-apache
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-apache/ChangeLog,v 1.34 2012/04/29 10:12:00 swift Exp $

  29 Apr 2012; <swift@gentoo.org> selinux-apache-2.20120215.ebuild:
  Stabilizing revision 7

*selinux-apache-2.20120215-r1 (26 Apr 2012)

  26 Apr 2012; <swift@gentoo.org> +selinux-apache-2.20120215-r1.ebuild:
  Support httpd_setrlimit (bug #411149)

*selinux-apache-2.20120215 (31 Mar 2012)

  31 Mar 2012; <swift@gentoo.org> +selinux-apache-2.20120215.ebuild:
  Bumping to 2.20120215 policies

  23 Feb 2012; <swift@gentoo.org> selinux-apache-2.20110726-r2.ebuild:
  Stabilizing

*selinux-apache-2.20110726-r2 (14 Jan 2012)

  14 Jan 2012; <swift@gentoo.org> +selinux-apache-2.20110726-r2.ebuild:
  Adding aggregated types for use by other web server domains

  12 Nov 2011; <swift@gentoo.org> -selinux-apache-2.20101213-r1.ebuild:
  Removing old policies

  23 Oct 2011; <swift@gentoo.org> selinux-apache-2.20110726-r1.ebuild:
  Stabilization (tracker #384231)

*selinux-apache-2.20110726-r1 (28 Aug 2011)

  28 Aug 2011; <swift@gentoo.org> +selinux-apache-2.20110726-r1.ebuild:
  Updating policy builds to refpolicy 20110726

  04 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
  -selinux-apache-2.20090730.ebuild, -selinux-apache-2.20091215.ebuild,
  -selinux-apache-2.20101213.ebuild, -selinux-apache-20080525.ebuild:
  Removed deprecated policies

  02 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
  selinux-apache-2.20101213-r1.ebuild:
  Stable amd64 x86

*selinux-apache-2.20101213-r1 (05 Feb 2011)
*selinux-apache-2.20101213 (05 Feb 2011)

  05 Feb 2011; Anthony G. Basile <blueness@gentoo.org>
  +selinux-apache-2.20101213.ebuild, +selinux-apache-2.20101213-r1.ebuild:
  New upstream policy.

*selinux-apache-2.20091215 (16 Dec 2009)

  16 Dec 2009; Chris PeBenito <pebenito@gentoo.org>
  +selinux-apache-2.20091215.ebuild:
  New upstream release.
