@@ -1,13 +1,13 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-apache/selinux-apache-2.20120215-r1.ebuild,v 1.1 2012/04/26 18:38:44 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-apache/selinux-apache-2.20120215-r1.ebuild,v 1.2 2012/05/01 11:21:47 swift Exp $
 EAPI="4"
-
-inherit selinux-policy-2
 
 IUSE="kerberos"
 MODS="apache"
 BASEPOL="2.20120215-r8"
+
+inherit selinux-policy-2
 
 DESCRIPTION="SELinux policy for Apache HTTPD"
 DEPEND="${DEPEND}
