@@ -1,6 +1,9 @@
 # ChangeLog for sec-policy/selinux-apache
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-apache/ChangeLog,v 1.34 2012/04/29 10:12:00 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-apache/ChangeLog,v 1.35 2012/05/01 11:21:47 swift Exp $
+
+  01 May 2012; <swift@gentoo.org> selinux-apache-2.20120215-r1.ebuild:
+  Pull inherit somewhat down, BASEPOL needs to be mentioned up front
 
   29 Apr 2012; <swift@gentoo.org> selinux-apache-2.20120215.ebuild:
   Stabilizing revision 7
